<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corner_categories"
    android:backgroundTint="#EACFB2"
    android:orientation="horizontal"
    android:padding="11dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_dishes"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dishicon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_dishes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:text="@string/dishName"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/dishType"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/dishPrice"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_dish"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:elevation="1dp"
        android:padding="2dp"
        android:src="@drawable/delete" />


</LinearLayout>

