<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="11dp"
    android:background="@drawable/rounded_corner_categories"
    android:backgroundTint="#EACFB2"
    android:layout_margin="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView_categories"
        android:src="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:text="@string/enter_resturant_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_resturant_address"
            android:id="@+id/address"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_resturant_city"
            android:id="@+id/city"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:padding="8dp"/>


    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/delete"
        android:elevation="1dp"
        android:id="@+id/delete_category"
        android:padding="2dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/delete" />


</LinearLayout>