<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDBF1A"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/helloThere"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="#60ffffff"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/registeredEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="@string/registeredEmail" />

    <EditText
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="#60ffffff"
        android:ems="10"
        android:hint="@string/passwords_signIn"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="@string/passwords_signIn" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_btn"
            android:backgroundTint="#2A95CD"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="239dp"
            android:layout_height="211dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/doorbeen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/welcomeBack"
        android:textColor="#ffff"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="30dp"
        android:paddingStart="1dp"
        android:layout_marginTop="9dp"
        android:text="@string/forgotPass"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

        <TextView
            android:id="@+id/dontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/dontHaveAcc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.32" />

        <ProgressBar
            android:id="@+id/progressBar_signIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="invisible"
            android:indeterminateTint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.575" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>